--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="" />
+    <link rel="icon" type="image/svg+xml" href="https://www.svgrepo.com/show/6996/world.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wordle Explorer</title>
   </head>
